# pydantic-graph-studio

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pypi-release.yml
examples/: ai_concierge.py  error_handling.py  graph.py  human_in_the_loop.py  parallel_joins.py  streaming_events.py  tool_usage.py
openspec/: project.md
openspec/changes/add-dagre-layout/: design.md  tasks.md
openspec/changes/add-example-runner/: tasks.md
openspec/changes/add-example-runner/specs/cli-launcher/: spec.md
openspec/changes/add-example-themes/: proposal.md  tasks.md
openspec/changes/add-example-themes/specs/example-library/: spec.md
openspec/changes/add-interactive-run-controls/: design.md  proposal.md  tasks.md
openspec/changes/add-interactive-run-controls/specs/local-studio-server/: spec.md
openspec/changes/add-interactive-run-controls/specs/runtime-event-stream/: spec.md
openspec/changes/add-interactive-run-controls/specs/studio-ui-layout/: spec.md
openspec/changes/add-parallel-graph-support/: proposal.md  tasks.md
openspec/changes/add-parallel-graph-support/specs/graph-introspection/: spec.md
openspec/changes/add-pypi-release/: tasks.md
openspec/changes/add-pypi-release/specs/pypi-release/: spec.md
openspec/changes/add-v1-mvp-spec/: tasks.md
openspec/changes/archive/2026-02-02-add-v1-mvp-spec/: proposal.md  tasks.md
openspec/changes/archive/2026-02-03-add-dagre-layout/: proposal.md  tasks.md
openspec/changes/archive/2026-02-05-add-example-runner/: proposal.md
openspec/changes/archive/2026-02-05-add-pypi-release/: proposal.md  tasks.md
openspec/specs/cli-launcher/: spec.md
openspec/specs/graph-introspection/: spec.md
openspec/specs/local-studio-server/: spec.md
openspec/specs/pypi-release/: spec.md
openspec/specs/runtime-event-stream/: spec.md
openspec/specs/studio-ui-layout/: spec.md
src/pydantic_graph_studio/: __init__.py  cli.py  introspection.py  runtime.py  schemas.py  server.py
src/pydantic_graph_studio/examples/: __init__.py  error_handling.py  human_in_the_loop.py  streaming_events.py  tool_usage.py
src/pydantic_graph_studio/ui/: __init__.py  index.html
src/pydantic_graph_studio/ui/assets/: app.js  tailwind.css  theme.css
tests/: conftest.py  test_beta_introspection.py  test_beta_runtime_events.py  test_cli.py  test_dummy.py  test_introspection.py  test_runtime_events.py  test_server.py
(+7 files in other folders)
