[project]
name = "pydantic-graph-studio"
version = "0.1.0"
description = "A lightweight studio/CLI scaffold for pydantic-graph projects."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Thomas Chaigneau", email = "thomas@chainyo.dev" }]
keywords = ["pydantic", "pydantic-graph", "graph", "studio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "pydantic-graph>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[project.scripts]
pydantic-graph-studio = "pydantic_graph_studio:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ty]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
